navigation: remove flex-wrap in to fix nav width

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -74,7 +74,6 @@ $navigation-sub-menu-width: $grid-size * 25;
 .wp-block-navigation,
 .wp-block-navigation .block-editor-block-list__layout {
 	display: flex;
-	flex-wrap: wrap;
 }
 
 .wp-block-navigation {
